A fix and test case for Bug#6102 "Server crash with prepared statement and blank after function name". Crop fruits of copy-paste programming: pre-caching of stored functions wasn't performed for prepared statements just because implementation of prepared statements is done as an add-on to the main execution flow, and the preload was originally implemented for main execution branch only (mysql_execute_command).

mysql-test/r/ps.result:
  Test results fixed: bug#6102
mysql-test/t/ps.test:
  A test case for Bug#6102 "Server crash with prepared statement
   and blank after functionname"
sql/sql_prepare.cc:
  A fix for Bug#6102 "Server crash with prepared statement and blank 
  after functionname": we need to preload stored functions from system tables
   before we open any other tables.